@@ -467,6 +467,19 @@ class TestThread < Test::Unit::TestCase
     m.unlock
   end
 
+  def test_recursive_outer
+    arr = []
+    obj = Struct.new(:foo, :visited).new(arr, false)
+    arr << obj
+    def obj.hash
+      self[:visited] = true
+      super
+      raise "recursive_outer should short circuit intermediate calls"
+    end
+    assert_nothing_raised {arr.hash}
+    assert(obj[:visited], "obj.hash was not called")
+  end
+
   def test_thread_instance_variable
     bug4389 = '[ruby-core:35192]'
     assert_in_out_err([], <<-INPUT, %w(), [], bug4389)
